2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vapigen/valavapigen.vala:

	Fix handling of ref array arguments

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vala/valaunaryexpression.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* compiler/valacompiler.vala:

	Fix memory management for ref and out arguments

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:

	Don't complain about incompatible signal handlers when using
	signals in generic types

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_value_get_buffer and gst_value_get_structure bindings,
	patch by Ali Sabil

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vala/valastruct.vala:
	* gobject/valaccodedynamicmethodbinding.vala:
	* gobject/valaccodegeneratorsignal.vala:
	* gobject/valaccodeobjecttypesymbolbinding.vala:

	Add support for structs in D-Bus service and client methods,
	fixes bug 534548 and bug 534549

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_value_list_get_value binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: hide gtk_menu_item_select and
	gtk_menu_item_deselect, already available in base class

	* vapi/gtk+-2.0.vapi: regenerated

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:
	* vapi/packages/gtksourceview-2.0/:

	Nullable and `out' fixes,
	based on patch by Nicolas Joseph, fixes bug 535618

	* vapi/gtk+-2.0.vapi:
	* vapi/gtksourceview-2.0.vapi:

	Regenerated

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vapi:

	Convert to instance_pos attribute syntax,
	patch by Nicolas Joseph, fixes bug 535617

2008-05-31  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtksourceview-2.0/:
